fixtures/positive/schema.inc
---
[schema]
allow_extra = false
[MUST]
title = String
columns.score = String
[MUST_NOT]
internal_id = String
[OPTIONAL]
version = Int
[description]
title = Human-readable title
columns.score = Meaning of the score column
---
