fixtures/negative/schema_duplicate_requirement.inc
---
[MUST]
title = String
[OPTIONAL]
title = String
---
